fix(shop): COMPLETED 전 주문귀속 INCOME require(fail-closed)
라이브 92c500fa처럼 fulfill이 INCOME ensured를 주장해도 타주문/orphan
합산으로 early-return하던 경로를 제거한다. 엄격 주문 귀속 posted INCOME
이 금액 SSOT와 일치할 때만 성공하고, create complete 실패도 throwOnSkip
시 fail-closed. 환불 수리도 동일 require를 통과한 뒤에만 EXPENSE.

Co-authored-by: beta0629 <beta0629@users.noreply.github.com>