@@ -415,26 +415,28 @@ class AdminServiceImplShopOrderMappingRefundExpenseTest {
 
         when(mappingRepository.findByTenantIdAndId(TEST_TENANT_ID, MAPPING_ID))
                 .thenReturn(Optional.of(mapping));
-        AtomicInteger relatedReads = new AtomicInteger();
+        java.util.concurrent.atomic.AtomicBoolean incomeCreated =
+                new java.util.concurrent.atomic.AtomicBoolean(false);
         when(financialTransactionRepository.findByTenantIdAndRelatedEntityIdAndRelatedEntityTypeAndIsDeletedFalse(
                         TEST_TENANT_ID,
                         MAPPING_ID,
                         FinancialTransactionConstants.RELATED_ENTITY_CONSULTANT_CLIENT_MAPPING))
-                .thenAnswer(inv -> {
-                    int read = relatedReads.getAndIncrement();
-                    // 0 outer summarize, 1 repair summarize, 2 repair findPosted, 3 create dup-check → empty
-                    // 4+ post-repair verify → income
-                    if (read >= 4) {
-                        return List.of(repairedIncome);
-                    }
-                    return Collections.emptyList();
-                });
+                .thenAnswer(inv -> incomeCreated.get()
+                        ? List.of(repairedIncome)
+                        : Collections.emptyList());
         when(amountManagementService.getAccurateTransactionAmount(mapping)).thenReturn(100_000L);
         when(amountManagementService.checkAmountConsistency(MAPPING_ID))
                 .thenReturn(new AmountManagementService.AmountConsistencyResult(true, null, null, null));
         when(salaryTaxRateLookupService.getVatRate(TEST_TENANT_ID)).thenReturn(VAT_RATE);
         when(financialTransactionService.createTransaction(any(FinancialTransactionRequest.class), isNull()))
-                .thenReturn(FinancialTransactionResponse.builder().id(8801L).build());
+                .thenAnswer(inv -> {
+                    FinancialTransactionRequest req = inv.getArgument(0);
+                    if ("INCOME".equals(req.getTransactionType())) {
+                        incomeCreated.set(true);
+                        return FinancialTransactionResponse.builder().id(8801L).build();
+                    }
+                    return FinancialTransactionResponse.builder().id(8802L).build();
+                });
         when(financialTransactionRepository.findByTenantIdAndId(TEST_TENANT_ID, 8801L))
                 .thenReturn(Optional.of(repairedIncome));
         when(financialTransactionRepository.findByTenantIdAndRelatedEntityIdAndRelatedEntityTypeAndIsDeletedFalse(
@@ -491,26 +493,29 @@ class AdminServiceImplShopOrderMappingRefundExpenseTest {
 
         when(mappingRepository.findByTenantIdAndId(TEST_TENANT_ID, MAPPING_ID))
                 .thenReturn(Optional.of(mapping));
-        AtomicInteger relatedReads = new AtomicInteger();
+        java.util.concurrent.atomic.AtomicBoolean incomeCreated =
+                new java.util.concurrent.atomic.AtomicBoolean(false);
         when(financialTransactionRepository.findByTenantIdAndRelatedEntityIdAndRelatedEntityTypeAndIsDeletedFalse(
                         TEST_TENANT_ID,
                         MAPPING_ID,
                         FinancialTransactionConstants.RELATED_ENTITY_CONSULTANT_CLIENT_MAPPING))
-                .thenAnswer(inv -> {
-                    int read = relatedReads.getAndIncrement();
-                    // 0 outer, 1 repair summarize, 2 repair findPosted, 3 create dup → empty; 4+ income
-                    if (read >= 4) {
-                        return List.of(repairedIncome);
-                    }
-                    return Collections.emptyList();
-                });
+                .thenAnswer(inv -> incomeCreated.get()
+                        ? List.of(repairedIncome)
+                        : Collections.emptyList());
         when(amountManagementService.getAccurateTransactionAmount(mapping))
                 .thenReturn(liveRefundAmount.longValue());
         when(amountManagementService.checkAmountConsistency(MAPPING_ID))
                 .thenReturn(new AmountManagementService.AmountConsistencyResult(true, null, null, null));
         when(salaryTaxRateLookupService.getVatRate(TEST_TENANT_ID)).thenReturn(VAT_RATE);
         when(financialTransactionService.createTransaction(any(FinancialTransactionRequest.class), isNull()))
-                .thenReturn(FinancialTransactionResponse.builder().id(9901L).build());
+                .thenAnswer(inv -> {
+                    FinancialTransactionRequest req = inv.getArgument(0);
+                    if ("INCOME".equals(req.getTransactionType())) {
+                        incomeCreated.set(true);
+                        return FinancialTransactionResponse.builder().id(9901L).build();
+                    }
+                    return FinancialTransactionResponse.builder().id(9902L).build();
+                });
         when(financialTransactionRepository.findByTenantIdAndId(TEST_TENANT_ID, 9901L))
                 .thenReturn(Optional.of(repairedIncome));
         when(financialTransactionRepository.findByTenantIdAndRelatedEntityIdAndRelatedEntityTypeAndIsDeletedFalse(
@@ -637,28 +642,34 @@ class AdminServiceImplShopOrderMappingRefundExpenseTest {
         repairedIncome.setTenantId(TEST_TENANT_ID);
         repairedIncome.setId(7701L);
 
-        AtomicInteger relatedReads = new AtomicInteger();
+        java.util.concurrent.atomic.AtomicBoolean incomeCreated =
+                new java.util.concurrent.atomic.AtomicBoolean(false);
         when(financialTransactionRepository.findByTenantIdAndRelatedEntityIdAndRelatedEntityTypeAndIsDeletedFalse(
                         TEST_TENANT_ID,
                         MAPPING_ID,
                         FinancialTransactionConstants.RELATED_ENTITY_CONSULTANT_CLIENT_MAPPING))
-                .thenAnswer(inv -> {
-                    int read = relatedReads.getAndIncrement();
-                    // 0 outer summarize, 1 create dup-check → empty; 2+ post-create verify → income
-                    if (read >= 2) {
-                        return List.of(repairedIncome);
-                    }
-                    return Collections.emptyList();
-                });
+                .thenAnswer(inv -> incomeCreated.get()
+                        ? List.of(repairedIncome)
+                        : Collections.emptyList());
+        when(financialTransactionRepository.findByTenantIdAndRelatedEntityIdAndRelatedEntityTypeAndIsDeletedFalse(
+                        TEST_TENANT_ID,
+                        MAPPING_ID,
+                        FinancialTransactionConstants.RELATED_ENTITY_CONSULTANT_CLIENT_MAPPING_ADDITIONAL))
+                .thenReturn(Collections.emptyList());
         when(amountManagementService.getAccurateTransactionAmount(mapping))
                 .thenReturn(depositAmount.longValue());
         when(amountManagementService.checkAmountConsistency(MAPPING_ID))
                 .thenReturn(new AmountManagementService.AmountConsistencyResult(true, null, null, null));
         when(salaryTaxRateLookupService.getVatRate(TEST_TENANT_ID)).thenReturn(VAT_RATE);
         when(financialTransactionService.createTransaction(any(FinancialTransactionRequest.class), isNull()))
-                .thenReturn(FinancialTransactionResponse.builder().id(7701L).build());
+                .thenAnswer(inv -> {
+                    incomeCreated.set(true);
+                    return FinancialTransactionResponse.builder().id(7701L).build();
+                });
         when(financialTransactionRepository.findByTenantIdAndId(TEST_TENANT_ID, 7701L))
                 .thenReturn(Optional.of(repairedIncome));
+        when(financialTransactionRepository.save(any(FinancialTransaction.class)))
+                .thenAnswer(inv -> inv.getArgument(0));
 
         adminService.ensureConsultationDepositIncome(mapping);
 
@@ -728,35 +739,39 @@ class AdminServiceImplShopOrderMappingRefundExpenseTest {
         repairedIncome.setTenantId(TEST_TENANT_ID);
         repairedIncome.setId(7702L);
 
-        AtomicInteger relatedReads = new AtomicInteger();
+        java.util.concurrent.atomic.AtomicBoolean incomeCreated =
+                new java.util.concurrent.atomic.AtomicBoolean(false);
         when(financialTransactionRepository.findByTenantIdAndRelatedEntityIdAndRelatedEntityTypeAndIsDeletedFalse(
                         TEST_TENANT_ID,
                         MAPPING_ID,
                         FinancialTransactionConstants.RELATED_ENTITY_CONSULTANT_CLIENT_MAPPING))
-                .thenAnswer(inv -> {
-                    int read = relatedReads.getAndIncrement();
-                    // 0: outer pre-check. 1: create dup-check.
-                    // 2: post-create summarize. 3: create 후 attribution 재검증.
-                    // 이후 부모 REPEATABLE READ 스냅샷(없음) — 성공 판정에 쓰면 안 된다.
-                    if (read >= 2) {
-                        return List.of(repairedIncome);
-                    }
-                    return Collections.emptyList();
-                });
+                .thenAnswer(inv -> incomeCreated.get()
+                        ? List.of(repairedIncome)
+                        : Collections.emptyList());
+        when(financialTransactionRepository.findByTenantIdAndRelatedEntityIdAndRelatedEntityTypeAndIsDeletedFalse(
+                        TEST_TENANT_ID,
+                        MAPPING_ID,
+                        FinancialTransactionConstants.RELATED_ENTITY_CONSULTANT_CLIENT_MAPPING_ADDITIONAL))
+                .thenReturn(Collections.emptyList());
         when(amountManagementService.getAccurateTransactionAmount(mapping))
                 .thenReturn(depositAmount.longValue());
         when(amountManagementService.checkAmountConsistency(MAPPING_ID))
                 .thenReturn(new AmountManagementService.AmountConsistencyResult(true, null, null, null));
         when(salaryTaxRateLookupService.getVatRate(TEST_TENANT_ID)).thenReturn(VAT_RATE);
         when(financialTransactionService.createTransaction(any(FinancialTransactionRequest.class), isNull()))
-                .thenReturn(FinancialTransactionResponse.builder().id(7702L).build());
+                .thenAnswer(inv -> {
+                    incomeCreated.set(true);
+                    return FinancialTransactionResponse.builder().id(7702L).build();
+                });
         when(financialTransactionRepository.findByTenantIdAndId(TEST_TENANT_ID, 7702L))
                 .thenReturn(Optional.of(repairedIncome));
+        when(financialTransactionRepository.save(any(FinancialTransaction.class)))
+                .thenAnswer(inv -> inv.getArgument(0));
 
         adminService.ensureConsultationDepositIncome(mapping);
 
         verify(financialTransactionService).createTransaction(any(FinancialTransactionRequest.class), isNull());
-        assertThat(relatedReads.get()).isEqualTo(4);
+        assertThat(incomeCreated.get()).isTrue();
     }
 
     @Test
@@ -973,8 +988,6 @@ class AdminServiceImplShopOrderMappingRefundExpenseTest {
         when(salaryTaxRateLookupService.getVatRate(TEST_TENANT_ID)).thenReturn(VAT_RATE);
         when(mappingRepository.save(any(ConsultantClientMapping.class)))
                 .thenAnswer(inv -> inv.getArgument(0));
-        when(financialTransactionService.createTransaction(any(FinancialTransactionRequest.class), isNull()))
-                .thenReturn(FinancialTransactionResponse.builder().id(9901L).build());
         FinancialTransaction created = FinancialTransaction.builder()
                 .transactionType(FinancialTransaction.TransactionType.INCOME)
                 .category(FinancialTransactionConstants.CATEGORY_CONSULTATION_FEE)
@@ -985,21 +998,33 @@ class AdminServiceImplShopOrderMappingRefundExpenseTest {
                 .build();
         created.setId(9901L);
         created.setTenantId(TEST_TENANT_ID);
+        java.util.concurrent.atomic.AtomicBoolean incomeCreated =
+                new java.util.concurrent.atomic.AtomicBoolean(false);
+        when(financialTransactionService.createTransaction(any(FinancialTransactionRequest.class), isNull()))
+                .thenAnswer(inv -> {
+                    FinancialTransactionRequest req = inv.getArgument(0);
+                    created.setDescription(req.getDescription());
+                    created.setRemarks(req.getRemarks());
+                    created.setAmount(req.getAmount());
+                    incomeCreated.set(true);
+                    return FinancialTransactionResponse.builder().id(9901L).build();
+                });
         when(financialTransactionRepository.findByTenantIdAndId(TEST_TENANT_ID, 9901L))
                 .thenReturn(Optional.of(created));
-        AtomicInteger relatedReads = new AtomicInteger();
+        when(financialTransactionRepository.save(any(FinancialTransaction.class)))
+                .thenAnswer(inv -> inv.getArgument(0));
         when(financialTransactionRepository.findByTenantIdAndRelatedEntityIdAndRelatedEntityTypeAndIsDeletedFalse(
                         TEST_TENANT_ID,
                         MAPPING_ID,
                         FinancialTransactionConstants.RELATED_ENTITY_CONSULTANT_CLIENT_MAPPING))
-                .thenAnswer(inv -> {
-                    int read = relatedReads.getAndIncrement();
-                    // 0 outer, 1 create dup → empty; 2+ post-create → income
-                    if (read >= 2) {
-                        return List.of(created);
-                    }
-                    return Collections.emptyList();
-                });
+                .thenAnswer(inv -> incomeCreated.get()
+                        ? List.of(created)
+                        : Collections.emptyList());
+        when(financialTransactionRepository.findByTenantIdAndRelatedEntityIdAndRelatedEntityTypeAndIsDeletedFalse(
+                        TEST_TENANT_ID,
+                        MAPPING_ID,
+                        FinancialTransactionConstants.RELATED_ENTITY_CONSULTANT_CLIENT_MAPPING_ADDITIONAL))
+                .thenReturn(Collections.emptyList());
 
         adminService.ensureConsultationDepositIncome(mapping);
 
@@ -1058,8 +1083,6 @@ class AdminServiceImplShopOrderMappingRefundExpenseTest {
         when(salaryTaxRateLookupService.getVatRate(TEST_TENANT_ID)).thenReturn(VAT_RATE);
         when(mappingRepository.save(any(ConsultantClientMapping.class)))
                 .thenAnswer(inv -> inv.getArgument(0));
-        when(financialTransactionService.createTransaction(any(FinancialTransactionRequest.class), isNull()))
-                .thenReturn(FinancialTransactionResponse.builder().id(9910L).build());
         FinancialTransaction created = FinancialTransaction.builder()
                 .transactionType(FinancialTransaction.TransactionType.INCOME)
                 .category(FinancialTransactionConstants.CATEGORY_CONSULTATION_FEE)
@@ -1070,16 +1093,33 @@ class AdminServiceImplShopOrderMappingRefundExpenseTest {
                 .build();
         created.setId(9910L);
         created.setTenantId(TEST_TENANT_ID);
+        java.util.concurrent.atomic.AtomicBoolean incomeCreated =
+                new java.util.concurrent.atomic.AtomicBoolean(false);
+        when(financialTransactionService.createTransaction(any(FinancialTransactionRequest.class), isNull()))
+                .thenAnswer(inv -> {
+                    FinancialTransactionRequest req = inv.getArgument(0);
+                    created.setDescription(req.getDescription());
+                    created.setRemarks(req.getRemarks());
+                    created.setAmount(req.getAmount());
+                    incomeCreated.set(true);
+                    return FinancialTransactionResponse.builder().id(9910L).build();
+                });
         when(financialTransactionRepository.findByTenantIdAndId(TEST_TENANT_ID, 9910L))
                 .thenReturn(Optional.of(created));
-        AtomicInteger relatedReads = new AtomicInteger();
+        when(financialTransactionRepository.save(any(FinancialTransaction.class)))
+                .thenAnswer(inv -> inv.getArgument(0));
         when(financialTransactionRepository.findByTenantIdAndRelatedEntityIdAndRelatedEntityTypeAndIsDeletedFalse(
                         TEST_TENANT_ID,
                         MAPPING_ID,
                         FinancialTransactionConstants.RELATED_ENTITY_CONSULTANT_CLIENT_MAPPING))
-                .thenAnswer(inv -> relatedReads.getAndIncrement() >= 2
+                .thenAnswer(inv -> incomeCreated.get()
                         ? List.of(created)
                         : Collections.emptyList());
+        when(financialTransactionRepository.findByTenantIdAndRelatedEntityIdAndRelatedEntityTypeAndIsDeletedFalse(
+                        TEST_TENANT_ID,
+                        MAPPING_ID,
+                        FinancialTransactionConstants.RELATED_ENTITY_CONSULTANT_CLIENT_MAPPING_ADDITIONAL))
+                .thenReturn(Collections.emptyList());
 
         adminService.ensureConsultationDepositIncome(mapping);
 
@@ -1129,8 +1169,6 @@ class AdminServiceImplShopOrderMappingRefundExpenseTest {
         when(salaryTaxRateLookupService.getVatRate(TEST_TENANT_ID)).thenReturn(VAT_RATE);
         when(mappingRepository.save(any(ConsultantClientMapping.class)))
                 .thenAnswer(inv -> inv.getArgument(0));
-        when(financialTransactionService.createTransaction(any(FinancialTransactionRequest.class), isNull()))
-                .thenReturn(FinancialTransactionResponse.builder().id(9911L).build());
         FinancialTransaction created = FinancialTransaction.builder()
                 .transactionType(FinancialTransaction.TransactionType.INCOME)
                 .category(FinancialTransactionConstants.CATEGORY_CONSULTATION_FEE)
@@ -1141,16 +1179,33 @@ class AdminServiceImplShopOrderMappingRefundExpenseTest {
                 .build();
         created.setId(9911L);
         created.setTenantId(TEST_TENANT_ID);
+        java.util.concurrent.atomic.AtomicBoolean incomeCreated =
+                new java.util.concurrent.atomic.AtomicBoolean(false);
+        when(financialTransactionService.createTransaction(any(FinancialTransactionRequest.class), isNull()))
+                .thenAnswer(inv -> {
+                    FinancialTransactionRequest req = inv.getArgument(0);
+                    created.setDescription(req.getDescription());
+                    created.setRemarks(req.getRemarks());
+                    created.setAmount(req.getAmount());
+                    incomeCreated.set(true);
+                    return FinancialTransactionResponse.builder().id(9911L).build();
+                });
         when(financialTransactionRepository.findByTenantIdAndId(TEST_TENANT_ID, 9911L))
                 .thenReturn(Optional.of(created));
-        AtomicInteger relatedReads = new AtomicInteger();
+        when(financialTransactionRepository.save(any(FinancialTransaction.class)))
+                .thenAnswer(inv -> inv.getArgument(0));
         when(financialTransactionRepository.findByTenantIdAndRelatedEntityIdAndRelatedEntityTypeAndIsDeletedFalse(
                         TEST_TENANT_ID,
                         MAPPING_ID,
                         FinancialTransactionConstants.RELATED_ENTITY_CONSULTANT_CLIENT_MAPPING))
-                .thenAnswer(inv -> relatedReads.getAndIncrement() >= 2
+                .thenAnswer(inv -> incomeCreated.get()
                         ? List.of(created)
                         : Collections.emptyList());
+        when(financialTransactionRepository.findByTenantIdAndRelatedEntityIdAndRelatedEntityTypeAndIsDeletedFalse(
+                        TEST_TENANT_ID,
+                        MAPPING_ID,
+                        FinancialTransactionConstants.RELATED_ENTITY_CONSULTANT_CLIENT_MAPPING_ADDITIONAL))
+                .thenReturn(Collections.emptyList());
 
         adminService.ensureConsultationDepositIncome(mapping);
 
@@ -1336,23 +1391,33 @@ class AdminServiceImplShopOrderMappingRefundExpenseTest {
         when(salaryTaxRateLookupService.getVatRate(TEST_TENANT_ID)).thenReturn(VAT_RATE);
         when(mappingRepository.save(any(ConsultantClientMapping.class)))
                 .thenAnswer(inv -> inv.getArgument(0));
+        java.util.concurrent.atomic.AtomicBoolean incomeCreated =
+                new java.util.concurrent.atomic.AtomicBoolean(false);
         when(financialTransactionService.createTransaction(any(FinancialTransactionRequest.class), isNull()))
-                .thenReturn(FinancialTransactionResponse.builder().id(8801L).build());
+                .thenAnswer(inv -> {
+                    FinancialTransactionRequest req = inv.getArgument(0);
+                    repairedIncome.setDescription(req.getDescription());
+                    repairedIncome.setRemarks(req.getRemarks());
+                    repairedIncome.setAmount(req.getAmount());
+                    incomeCreated.set(true);
+                    return FinancialTransactionResponse.builder().id(8801L).build();
+                });
         when(financialTransactionRepository.findByTenantIdAndId(TEST_TENANT_ID, 8801L))
                 .thenReturn(Optional.of(repairedIncome));
-
-        AtomicInteger relatedReads = new AtomicInteger();
+        when(financialTransactionRepository.save(any(FinancialTransaction.class)))
+                .thenAnswer(inv -> inv.getArgument(0));
         when(financialTransactionRepository.findByTenantIdAndRelatedEntityIdAndRelatedEntityTypeAndIsDeletedFalse(
                         TEST_TENANT_ID,
                         MAPPING_ID,
                         FinancialTransactionConstants.RELATED_ENTITY_CONSULTANT_CLIENT_MAPPING))
-                .thenAnswer(inv -> {
-                    int read = relatedReads.getAndIncrement();
-                    if (read >= 2) {
-                        return List.of(repairedIncome);
-                    }
-                    return Collections.emptyList();
-                });
+                .thenAnswer(inv -> incomeCreated.get()
+                        ? List.of(repairedIncome)
+                        : Collections.emptyList());
+        when(financialTransactionRepository.findByTenantIdAndRelatedEntityIdAndRelatedEntityTypeAndIsDeletedFalse(
+                        TEST_TENANT_ID,
+                        MAPPING_ID,
+                        FinancialTransactionConstants.RELATED_ENTITY_CONSULTANT_CLIENT_MAPPING_ADDITIONAL))
+                .thenReturn(Collections.emptyList());
 
         adminService.ensureConsultationDepositIncome(mapping);
 
@@ -1952,6 +2017,214 @@ class AdminServiceImplShopOrderMappingRefundExpenseTest {
         assertThat(reqs.get(1).getRelatedEntityType())
                 .isEqualTo(FinancialTransactionConstants.RELATED_ENTITY_CONSULTANT_CLIENT_MAPPING_REFUND);
         assertThat(foreignIncome.getRemarks()).contains("SHOP-OLD-PRIOR");
+    }
+
+    @Test
+    @DisplayName("live 92c500fa: 동일금액 타주문 INCOME만 있어도 현재 주문 INCOME 신규+require(COMPLETED 위장 금지)")
+    void ensureConsultationDepositIncome_liveEvidence_92c500fa_sameAmountForeignIncome_createsAttributed() {
+        // Given: mapping 에 과거 주문 INCOME(동일 ₩10000)만 있고, 신규 PAID 주문 claim
+        final long cashDue = 10_000L;
+        final String priorOrderPublicId = "SHOP-PRIOR-2FD279FB";
+        final String orderPublicId = "SHOP-20260917-003";
+        final String paymentId = "PAY_92C500FA";
+        final String titleSnapshot = "Consultation package";
+
+        ConsultantClientMapping mapping = buildMapping(MAPPING_ID, 10, cashDue);
+        mapping.setPackageName(titleSnapshot);
+        mapping.setPackagePrice(cashDue);
+        mapping.setPaymentAmount(cashDue);
+
+        com.coresolution.consultation.entity.ShopClientOrder order =
+                com.coresolution.consultation.entity.ShopClientOrder.builder()
+                        .publicId(orderPublicId)
+                        .cashDueMinor(cashDue)
+                        .build();
+        com.coresolution.consultation.entity.ShopClientOrderLine line =
+                com.coresolution.consultation.entity.ShopClientOrderLine.builder()
+                        .clientOrder(order)
+                        .titleSnapshot(titleSnapshot)
+                        .sessionCountSnapshot(10)
+                        .quantity(1)
+                        .lineTotalMinor(cashDue)
+                        .consultantClientMappingId(MAPPING_ID)
+                        .build();
+        com.coresolution.consultation.repository.ShopClientOrderLineRepository shopLineRepo =
+                org.mockito.Mockito.mock(
+                        com.coresolution.consultation.repository.ShopClientOrderLineRepository.class);
+        com.coresolution.consultation.repository.PaymentRepository paymentRepo =
+                org.mockito.Mockito.mock(com.coresolution.consultation.repository.PaymentRepository.class);
+        when(shopLineRepo.findByTenantIdAndConsultantClientMappingIdInAndIsDeletedFalseOrderByIdDesc(
+                        eq(TEST_TENANT_ID), eq(List.of(MAPPING_ID))))
+                .thenReturn(List.of(line));
+        adminService = rebuildAdminService(shopLineRepo, paymentRepo);
+
+        FinancialTransaction foreignPosted = FinancialTransaction.builder()
+                .transactionType(FinancialTransaction.TransactionType.INCOME)
+                .category(FinancialTransactionConstants.CATEGORY_CONSULTATION_FEE)
+                .amount(new BigDecimal(cashDue))
+                .status(FinancialTransaction.TransactionStatus.COMPLETED)
+                .relatedEntityId(MAPPING_ID)
+                .relatedEntityType(FinancialTransactionConstants.RELATED_ENTITY_CONSULTANT_CLIENT_MAPPING)
+                .description("상담료 입금 확인 - prior")
+                .remarks("orderPublicId=" + priorOrderPublicId + "; paymentId=PAY_OLD_269")
+                .build();
+        foreignPosted.setId(269L);
+        foreignPosted.setTenantId(TEST_TENANT_ID);
+
+        String expectedRemarks = String.format(
+                com.coresolution.consultation.constant.admin.AdminServiceUserFacingMessages
+                        .REMARKS_SHOP_ORDER_INCOME_FMT,
+                orderPublicId,
+                paymentId);
+        FinancialTransaction createdIncome = FinancialTransaction.builder()
+                .transactionType(FinancialTransaction.TransactionType.INCOME)
+                .category(FinancialTransactionConstants.CATEGORY_CONSULTATION_FEE)
+                .amount(new BigDecimal(cashDue))
+                .status(FinancialTransaction.TransactionStatus.COMPLETED)
+                .relatedEntityId(MAPPING_ID)
+                .relatedEntityType(FinancialTransactionConstants.RELATED_ENTITY_CONSULTANT_CLIENT_MAPPING)
+                .description("상담료 입금 확인 - " + titleSnapshot)
+                .remarks(expectedRemarks)
+                .build();
+        createdIncome.setId(280L);
+        createdIncome.setTenantId(TEST_TENANT_ID);
+
+        java.util.concurrent.atomic.AtomicBoolean incomeCreated =
+                new java.util.concurrent.atomic.AtomicBoolean(false);
+        when(financialTransactionRepository.findByTenantIdAndRelatedEntityIdAndRelatedEntityTypeAndIsDeletedFalse(
+                        TEST_TENANT_ID,
+                        MAPPING_ID,
+                        FinancialTransactionConstants.RELATED_ENTITY_CONSULTANT_CLIENT_MAPPING))
+                .thenAnswer(inv -> incomeCreated.get()
+                        ? List.of(foreignPosted, createdIncome)
+                        : List.of(foreignPosted));
+        when(financialTransactionRepository.findByTenantIdAndRelatedEntityIdAndRelatedEntityTypeAndIsDeletedFalse(
+                        TEST_TENANT_ID,
+                        MAPPING_ID,
+                        FinancialTransactionConstants.RELATED_ENTITY_CONSULTANT_CLIENT_MAPPING_ADDITIONAL))
+                .thenReturn(Collections.emptyList());
+        when(salaryTaxRateLookupService.getVatRate(TEST_TENANT_ID)).thenReturn(VAT_RATE);
+        when(mappingRepository.save(any(ConsultantClientMapping.class)))
+                .thenAnswer(inv -> inv.getArgument(0));
+        when(amountManagementService.checkAmountConsistency(MAPPING_ID))
+                .thenReturn(new AmountManagementService.AmountConsistencyResult(true, null, null, null));
+        when(financialTransactionService.createTransaction(any(FinancialTransactionRequest.class), isNull()))
+                .thenAnswer(inv -> {
+                    incomeCreated.set(true);
+                    return FinancialTransactionResponse.builder().id(280L).build();
+                });
+        when(financialTransactionRepository.findByTenantIdAndId(TEST_TENANT_ID, 280L))
+                .thenReturn(Optional.of(createdIncome));
+        when(financialTransactionRepository.save(any(FinancialTransaction.class)))
+                .thenAnswer(inv -> inv.getArgument(0));
+
+        com.coresolution.consultation.dto.shop.ShopOrderIncomeClaim claim =
+                com.coresolution.consultation.dto.shop.ShopOrderIncomeClaim.builder()
+                        .orderPublicId(orderPublicId)
+                        .paymentId(paymentId)
+                        .titleSnapshot(titleSnapshot)
+                        .cashDueMinor(cashDue)
+                        .sessionCount(10)
+                        .build();
+
+        // When
+        adminService.ensureConsultationDepositIncome(mapping, claim);
+
+        // Then: 타주문 INCOME(동일 금액)으로 early-success 금지 — 현재 주문 행 신규 생성
+        ArgumentCaptor<FinancialTransactionRequest> reqCaptor =
+                ArgumentCaptor.forClass(FinancialTransactionRequest.class);
+        verify(financialTransactionService).createTransaction(reqCaptor.capture(), isNull());
+        assertThat(reqCaptor.getValue().getAmount()).isEqualByComparingTo(new BigDecimal(cashDue));
+        assertThat(reqCaptor.getValue().getRemarks()).isEqualTo(expectedRemarks);
+        assertThat(foreignPosted.getRemarks()).contains(priorOrderPublicId);
+        assertThat(foreignPosted.getAmount()).isEqualByComparingTo(new BigDecimal(cashDue));
+    }
+
+    @Test
+    @DisplayName("ensure: create 후에도 주문귀속 INCOME 없으면 fail-closed(COMPLETED 금지)")
+    void ensureConsultationDepositIncome_createWithoutAttributedRow_throwsFailClosed() {
+        final long cashDue = 10_000L;
+        final String orderPublicId = "SHOP-FAIL-CLOSED-001";
+        final String paymentId = "PAY_FAIL_CLOSED";
+        final String titleSnapshot = "Fail closed package";
+
+        ConsultantClientMapping mapping = buildMapping(MAPPING_ID, 1, cashDue);
+        mapping.setPackageName(titleSnapshot);
+        mapping.setPackagePrice(cashDue);
+        mapping.setPaymentAmount(cashDue);
+
+        com.coresolution.consultation.entity.ShopClientOrder order =
+                com.coresolution.consultation.entity.ShopClientOrder.builder()
+                        .publicId(orderPublicId)
+                        .cashDueMinor(cashDue)
+                        .build();
+        com.coresolution.consultation.entity.ShopClientOrderLine line =
+                com.coresolution.consultation.entity.ShopClientOrderLine.builder()
+                        .clientOrder(order)
+                        .titleSnapshot(titleSnapshot)
+                        .sessionCountSnapshot(1)
+                        .quantity(1)
+                        .lineTotalMinor(cashDue)
+                        .consultantClientMappingId(MAPPING_ID)
+                        .build();
+        com.coresolution.consultation.repository.ShopClientOrderLineRepository shopLineRepo =
+                org.mockito.Mockito.mock(
+                        com.coresolution.consultation.repository.ShopClientOrderLineRepository.class);
+        com.coresolution.consultation.repository.PaymentRepository paymentRepo =
+                org.mockito.Mockito.mock(com.coresolution.consultation.repository.PaymentRepository.class);
+        when(shopLineRepo.findByTenantIdAndConsultantClientMappingIdInAndIsDeletedFalseOrderByIdDesc(
+                        eq(TEST_TENANT_ID), eq(List.of(MAPPING_ID))))
+                .thenReturn(List.of(line));
+        adminService = rebuildAdminService(shopLineRepo, paymentRepo);
+
+        // createTransaction 은 성공처럼 보이지만 related-entity 조회에는 계속 빈 목록 → require fail-closed
+        when(financialTransactionRepository.findByTenantIdAndRelatedEntityIdAndRelatedEntityTypeAndIsDeletedFalse(
+                        TEST_TENANT_ID,
+                        MAPPING_ID,
+                        FinancialTransactionConstants.RELATED_ENTITY_CONSULTANT_CLIENT_MAPPING))
+                .thenReturn(Collections.emptyList());
+        when(financialTransactionRepository.findByTenantIdAndRelatedEntityIdAndRelatedEntityTypeAndIsDeletedFalse(
+                        TEST_TENANT_ID,
+                        MAPPING_ID,
+                        FinancialTransactionConstants.RELATED_ENTITY_CONSULTANT_CLIENT_MAPPING_ADDITIONAL))
+                .thenReturn(Collections.emptyList());
+        when(salaryTaxRateLookupService.getVatRate(TEST_TENANT_ID)).thenReturn(VAT_RATE);
+        when(mappingRepository.save(any(ConsultantClientMapping.class)))
+                .thenAnswer(inv -> inv.getArgument(0));
+        when(amountManagementService.checkAmountConsistency(MAPPING_ID))
+                .thenReturn(new AmountManagementService.AmountConsistencyResult(true, null, null, null));
+        when(financialTransactionService.createTransaction(any(FinancialTransactionRequest.class), isNull()))
+                .thenReturn(FinancialTransactionResponse.builder().id(999L).build());
+        FinancialTransaction ghost = FinancialTransaction.builder()
+                .transactionType(FinancialTransaction.TransactionType.INCOME)
+                .category(FinancialTransactionConstants.CATEGORY_CONSULTATION_FEE)
+                .amount(new BigDecimal(cashDue))
+                .status(FinancialTransaction.TransactionStatus.PENDING)
+                .relatedEntityId(MAPPING_ID)
+                .relatedEntityType(FinancialTransactionConstants.RELATED_ENTITY_CONSULTANT_CLIENT_MAPPING)
+                .description("ghost")
+                .remarks("orderPublicId=OTHER; paymentId=OTHER")
+                .build();
+        ghost.setId(999L);
+        ghost.setTenantId(TEST_TENANT_ID);
+        when(financialTransactionRepository.findByTenantIdAndId(TEST_TENANT_ID, 999L))
+                .thenReturn(Optional.of(ghost));
+        when(financialTransactionRepository.save(any(FinancialTransaction.class)))
+                .thenAnswer(inv -> inv.getArgument(0));
+
+        com.coresolution.consultation.dto.shop.ShopOrderIncomeClaim claim =
+                com.coresolution.consultation.dto.shop.ShopOrderIncomeClaim.builder()
+                        .orderPublicId(orderPublicId)
+                        .paymentId(paymentId)
+                        .titleSnapshot(titleSnapshot)
+                        .cashDueMinor(cashDue)
+                        .sessionCount(1)
+                        .build();
+
+        assertThatThrownBy(() -> adminService.ensureConsultationDepositIncome(mapping, claim))
+                .isInstanceOf(IllegalStateException.class)
+                .hasMessageContaining("COMPLETED 금지");
+        verify(financialTransactionService).createTransaction(any(FinancialTransactionRequest.class), isNull());
     }
 
     @Test
